--- a/app/src/main/res/layout/add_client_activity.xml
+++ b/app/src/main/res/layout/add_client_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout_addobject"
+    android:id="@+id/drawer_layout_addclient"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainBackground"
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_addobject"
+                android:id="@+id/toolbar_addclient"
                 android:layout_width="match_parent"
                 android:src="@mipmap/ic_plus"
                 android:layout_height="?attr/actionBarSize"
@@ -36,58 +36,58 @@
             android:paddingBottom="16dp">
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_object_name"
+                android:id="@+id/input_client_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/object_name"
+                    android:id="@+id/client_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
-                    android:hint="@string/nameobject_hint_name" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_object_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/object_address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/nameobject_hint_address" />
+                    android:hint="@string/nameclient_hint_name" />
             </android.support.design.widget.TextInputLayout>
 
             <fr.ganfra.materialspinner.MaterialSpinner
-                android:id="@+id/spinner_addobject"
+                android:id="@+id/spinner_addclient"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 app:ms_multiline="true"
                 app:ms_hintColor="@color/hint"
-                app:ms_hint="@string/nameobject_hint_client"
+                app:ms_hint="@string/nameclient_hint_type"
                 app:ms_thickness="2dp"
                 app:ms_arrowColor="@color/colorPrimaryDark"
                 app:ms_arrowSize="16dp"
                 app:ms_alignLabels="true"
                 app:ms_enableFloatingLabel="true"
                 app:ms_floatingLabelColor="@color/floating_label"
-                app:ms_floatingLabelText="Клиент"
+                app:ms_floatingLabelText="Тип клиента"
                 />
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_object_price"
+                android:id="@+id/input_client_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/object_price"
+                    android:id="@+id/client_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
-                    android:hint="@string/nameobject_hint_price" />
+                    android:hint="@string/nameclient_hint_phone" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_client_mail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/client_mail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:hint="@string/nameclient_hint_mail" />
             </android.support.design.widget.TextInputLayout>
 
 
