--- a/app/src/main/res/layout/add_event_activity.xml
+++ b/app/src/main/res/layout/add_event_activity.xml
@@ -35,39 +35,28 @@
             android:paddingTop="16dp"
             android:paddingBottom="16dp">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_object_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/object_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/nameobject_hint_name" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_object_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/object_address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/nameobject_hint_address" />
-            </android.support.design.widget.TextInputLayout>
-
             <fr.ganfra.materialspinner.MaterialSpinner
-                android:id="@+id/spinner_addobject"
+                android:id="@+id/spinner_addevent_objects"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 app:ms_multiline="true"
                 app:ms_hintColor="@color/hint"
-                app:ms_hint="@string/nameobject_hint_client"
+                app:ms_hint="@string/nameevent_hint_object"
+                app:ms_thickness="2dp"
+                app:ms_arrowColor="@color/colorPrimaryDark"
+                app:ms_arrowSize="16dp"
+                app:ms_alignLabels="true"
+                app:ms_enableFloatingLabel="true"
+                app:ms_floatingLabelColor="@color/floating_label"
+                app:ms_floatingLabelText="Объект"
+                />
+            <fr.ganfra.materialspinner.MaterialSpinner
+                android:id="@+id/spinner_addevent_clients"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                app:ms_multiline="true"
+                app:ms_hintColor="@color/hint"
+                app:ms_hint="@string/nameevent_hint_client"
                 app:ms_thickness="2dp"
                 app:ms_arrowColor="@color/colorPrimaryDark"
                 app:ms_arrowSize="16dp"
@@ -76,18 +65,59 @@
                 app:ms_floatingLabelColor="@color/floating_label"
                 app:ms_floatingLabelText="Клиент"
                 />
+            <fr.ganfra.materialspinner.MaterialSpinner
+                android:id="@+id/spinner_addevent_type"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                app:ms_multiline="true"
+                app:ms_hintColor="@color/hint"
+                app:ms_hint="@string/nameevent_hint_type"
+                app:ms_thickness="2dp"
+                app:ms_arrowColor="@color/colorPrimaryDark"
+                app:ms_arrowSize="16dp"
+                app:ms_alignLabels="true"
+                app:ms_enableFloatingLabel="true"
+                app:ms_floatingLabelColor="@color/floating_label"
+                app:ms_floatingLabelText="Тип события"
+                />
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_object_price"
+                android:id="@+id/input_event_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/object_price"
+                    android:id="@+id/event_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
-                    android:hint="@string/nameobject_hint_price" />
+                    android:hint="@string/nameevent_hint_name" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_event_place"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/event_place"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:hint="@string/nameevent_hint_place" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_event_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/event_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:hint="@string/nameevent_hint_info" />
             </android.support.design.widget.TextInputLayout>
 
 
