--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#008a9a</color>
     <color name="mainBackground">#e2e2e2</color>
     <color name="colorWhite">#e2e2e2</color>
+    <color name="colorBlack">#191919</color>
 
     <color name="base">#717171</color>
     <color name="highlight">#000000</color>
