--- a/app/src/main/res/layout/client_item.xml
+++ b/app/src/main/res/layout/client_item.xml
@@ -27,6 +27,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/popupmenu_icon"
                 android:layout_weight="0.1"
                 android:src="@mipmap/ic_dots_vertical_grey600_24dp"
                 android:layout_gravity="center_vertical|right"/>
