--- a/app/src/main/res/layout/add_event_activity.xml
+++ b/app/src/main/res/layout/add_event_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout_addobject"
+    android:id="@+id/drawer_layout_addevent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mainBackground"
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar_addobject"
+                android:id="@+id/toolbar_addevent"
                 android:layout_width="match_parent"
                 android:src="@mipmap/ic_plus"
                 android:layout_height="?attr/actionBarSize"
