--- a/app/src/main/res/layout/object_item.xml
+++ b/app/src/main/res/layout/object_item.xml
@@ -20,14 +20,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.9"
-                android:id="@+id/titleClient"
+                android:id="@+id/titleObject"
                 android:textSize="13pt"
                 android:textColor="@color/colorBlack"/>
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/popupmenu_client_icon"
+                android:id="@+id/popupmenu_object_icon"
                 android:layout_weight="0.1"
                 android:src="@mipmap/ic_dots_vertical_grey600_24dp"
                 android:layout_gravity="center_vertical|right"/>
