--- a/app/src/main/res/layout/client_find_object.xml
+++ b/app/src/main/res/layout/client_find_object.xml
@@ -10,21 +10,19 @@
         android:layout_height="48dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:id="@+id/titleEvent"
-            android:textSize="13pt"
-            android:textColor="@color/colorBlack"/>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_findclient_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/popupmenu_event_icon"
-            android:layout_weight="0.1"
-            android:src="@mipmap/ic_dots_vertical_grey600_24dp"
-            android:layout_gravity="center_vertical|right"/>
+            <EditText
+                android:id="@+id/findclient_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:hint="@string/findclient_hint_info" />
+        </android.support.design.widget.TextInputLayout>
+
 
 
 
