--- a/app/src/main/res/layout/add_object_activity.xml
+++ b/app/src/main/res/layout/add_object_activity.xml
@@ -90,9 +90,35 @@
                     android:hint="@string/nameobject_hint_price" />
             </android.support.design.widget.TextInputLayout>
 
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <GridView
+                    android:id="@+id/objectGridView"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:footerDividersEnabled="false"
+                    android:numColumns="4" />
+            </LinearLayout>
+
+
 
 
         </LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabObject"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:src="@mipmap/ic_camera_white_24dp"
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:clickable="true"/>
+
 
 
 
