--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -7,5 +7,11 @@
         android:icon="@mipmap/ic_done_white"
         app:showAsAction="always"
         />
+    <item
+        android:id="@+id/action_delete"
+        android:title="delete"
+        android:icon="@mipmap/ic_delete"
+        app:showAsAction="always"
+        />
 
 </menu>
