--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
 
     </style>
 
+    <style name="MyRadioButton" parent="AppTheme">
+        <item name="colorControlNormal">@android:color/white</item>
+    </style>
+
 </resources>
