--- a/app/src/main/res/layout/client_item.xml
+++ b/app/src/main/res/layout/client_item.xml
@@ -13,22 +13,23 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="36dp"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
+                android:layout_weight="1"
                 android:id="@+id/titleClient"
-                android:textSize="13pt"
+                android:textSize="24sp"
+                android:layout_gravity="center_vertical"
                 android:textColor="@color/colorBlack"/>
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/popupmenu_client_icon"
-                android:layout_weight="0.1"
+                android:layout_weight="9"
                 android:src="@mipmap/ic_dots_vertical_grey600_24dp"
                 android:layout_gravity="center_vertical|right"/>
 
