--- a/app/src/main/res/layout/add_event_activity.xml
+++ b/app/src/main/res/layout/add_event_activity.xml
@@ -87,70 +87,83 @@
                 app:ms_floatingLabelText="Тип события"
                 />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_event_name"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:paddingLeft="8dp"
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/event_name"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_event_name"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/nameevent_hint_name" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_event_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/event_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:hint="@string/nameevent_hint_name" />
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/event_date"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_event_date"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/nameevent_hint_date" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_event_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/event_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:hint="@string/nameevent_hint_date" />
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/event_time"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_event_time"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/nameevent_hint_time" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_event_place"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/event_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:hint="@string/nameevent_hint_time" />
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/event_place"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_event_place"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/nameevent_hint_place" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_event_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/event_place"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:hint="@string/nameevent_hint_place" />
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/event_info"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_event_info"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="@string/nameevent_hint_info" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/event_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:textSize="16dp"
+                        android:hint="@string/nameevent_hint_info" />
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
 
             <fr.ganfra.materialspinner.MaterialSpinner
                 android:id="@+id/spinner_reminder"
