--- a/app/src/main/res/layout/client_item.xml
+++ b/app/src/main/res/layout/client_item.xml
@@ -4,38 +4,54 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="12dp"
-    android:layout_marginRight="12dp">
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp">
 
 
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="64dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:orientation="horizontal">
+            android:layout_height="64dp"
+            android:id="@+id/llTextClient"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:id="@+id/titleClient"
-                android:textSize="24sp"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/colorBlack"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/titleClient"
+                    android:textSize="16sp"
+                    android:layout_gravity="bottom"
+                    android:textColor="@color/colorBlack"/>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/popupmenu_client_icon"
-                android:layout_weight="9"
-                android:src="@mipmap/ic_dots_vertical_grey600_24dp"
-                android:layout_gravity="center_vertical|right"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/typeClient"
+                    android:textSize="12sp"
+                    android:layout_gravity="bottom"
+                    android:textColor="@color/colorGrey"/>
+
+        </LinearLayout>
+
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:id="@+id/popupmenu_client_icon"
+                    android:layout_alignParentRight="true"
+                    android:src="@mipmap/ic_dots_vertical_grey600_24dp"
+                    android:layout_gravity="center_vertical|right"/>
 
 
 
-        </LinearLayout>>
+    </RelativeLayout>
 
 
 
