--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -4,34 +4,54 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="12dp"
-    android:layout_marginRight="12dp">
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp">
 
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="64dp"
             android:orientation="horizontal">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:id="@+id/titleEvent"
-                android:textSize="24sp"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/colorBlack"/>
+                android:orientation="vertical">
 
-            <ImageView
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/titleEvent"
+                    android:textSize="16sp"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/colorBlack"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/whenEvent"
+                    android:textSize="12sp"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/colorGrey"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/popupmenu_event_icon"
+                android:layout_height="64dp"
                 android:layout_weight="9"
-                android:src="@mipmap/ic_dots_vertical_grey600_24dp"
-                android:layout_gravity="center_vertical|right"/>
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/popupmenu_event_icon"
+                    android:src="@mipmap/ic_dots_vertical_grey600_24dp"
+                    android:layout_gravity="center_vertical|right"/>
+
+            </LinearLayout>
 
 
 
