--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="mainBackground">#e2e2e2</color>
     <color name="colorWhite">#e2e2e2</color>
     <color name="colorBlack">#191919</color>
+    <color name="colorLogoBackground">#ffb478</color>
+    <color name="colorGrey">#808080</color>
 
     <color name="base">#717171</color>
     <color name="highlight">#000000</color>
