--- a/app/src/main/res/layout/add_client_activity.xml
+++ b/app/src/main/res/layout/add_client_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout_addclient"
     android:layout_width="match_parent"
@@ -7,22 +7,22 @@
     android:background="@color/mainBackground"
     android:fitsSystemWindows="true">
 
-    <android.support.design.widget.CoordinatorLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_addclient"
                 android:layout_width="match_parent"
                 android:src="@mipmap/ic_plus"
                 android:layout_height="?attr/actionBarSize"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"
                 android:background="?attr/colorPrimary" />
-        </android.support.design.widget.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -41,7 +41,7 @@
                 android:paddingLeft="8dp"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_client_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -53,7 +53,7 @@
                         android:singleLine="true"
                         android:textSize="16dp"
                         android:hint="@string/nameclient_hint_name" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -79,7 +79,7 @@
                 android:paddingLeft="8dp"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_client_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -92,9 +92,9 @@
                         android:inputType="phone"
                         android:textSize="16dp"
                         android:hint="@string/nameclient_hint_phone" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_client_mail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -107,7 +107,7 @@
                         android:inputType="textEmailAddress"
                         android:textSize="16dp"
                         android:hint="@string/nameclient_hint_mail" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -125,8 +125,8 @@
 
 
 
-    </android.support.design.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
