--- a/app/src/main/res/layout/add_object_activity.xml
+++ b/app/src/main/res/layout/add_object_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout_addobject"
     android:layout_width="match_parent"
@@ -7,24 +7,24 @@
     android:background="@color/mainBackground"
     android:fitsSystemWindows="true">
 
-    <android.support.design.widget.CoordinatorLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_addobject"
                 android:layout_width="match_parent"
                 android:src="@mipmap/ic_plus"
                 android:layout_height="?attr/actionBarSize"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"
                 android:background="?attr/colorPrimary" />
-        </android.support.design.widget.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-        <android.support.v4.widget.NestedScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -48,7 +48,7 @@
                 android:paddingLeft="8dp"
                 android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -60,7 +60,7 @@
                         android:singleLine="true"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_name" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -70,7 +70,7 @@
                 android:paddingLeft="8dp"
                 android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -82,7 +82,7 @@
                         android:singleLine="true"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_address" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -196,7 +196,7 @@
                 android:paddingLeft="10dp"
                 android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_allsquare"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -210,9 +210,9 @@
                         android:inputType="numberDecimal"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_allsquare" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_livesquare"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -226,9 +226,9 @@
                         android:inputType="numberDecimal"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_livesquare" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_kitchensquare"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -242,7 +242,7 @@
                         android:inputType="numberDecimal"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_kitchensquare" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
 
             </LinearLayout>
@@ -253,7 +253,7 @@
                 android:paddingLeft="10dp"
                 android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_floor"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -267,9 +267,9 @@
                         android:inputType="number"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_floor" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_allfloor"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -283,7 +283,7 @@
                         android:inputType="number"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_allfloor" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -416,7 +416,7 @@
                 android:paddingLeft="10dp"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_yearconsruction"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -430,7 +430,7 @@
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_yearconstruction" />
 
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -504,7 +504,7 @@
                 android:paddingLeft="10dp"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -517,9 +517,9 @@
                         android:inputType="numberDecimal"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_price" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_pricesale"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -532,9 +532,9 @@
                         android:inputType="numberDecimal"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_pricesale" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/input_object_addinfo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -548,7 +548,7 @@
                         android:lines="2"
                         android:textSize="16dp"
                         android:hint="@string/nameobject_hint_addinfo" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -599,9 +599,9 @@
 
         </LinearLayout>
 
-        </android.support.v4.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
 
-       <android.support.design.widget.FloatingActionButton
+       <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabObject"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
@@ -614,8 +614,8 @@
 
 
 
-   </android.support.design.widget.CoordinatorLayout>
+   </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
