--- a/app/src/main/res/layout/view_client_activity.xml
+++ b/app/src/main/res/layout/view_client_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout_viewclient"
     android:layout_width="match_parent"
@@ -116,4 +116,4 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.core.widget.DrawerLayout>
